# Format-Preserving-Encryption

./: CMakeLists.txt  Makefile  README.md  example.c  ff1.c  ff3.c  fpe.h  fpe_locl.c  fpe_locl.h  makefile  test.c  test.py
src/: ff1.c  ff3.c  fpe.h
